# BookWorm

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-07-19-backup.md  2026-07-19-book-priority.md  2026-07-19-reading-sessions.md  2026-07-20-restore.md
docs/superpowers/specs/: 2026-07-19-backup-design.md  2026-07-19-book-priority-design.md  2026-07-19-reading-sessions-design.md  2026-07-20-restore-design.md
qml/: Main.qml
qml/components/: BookCard.qml  BookDetails.qml  BookForm.qml  BookListView.qml  BookTableView.qml  ChallengesView.qml  StatisticsOverview.qml  StatisticsSessions.qml  StatisticsView.qml
qml/theme/: Theme.qml  translations.js
sql/: init.sql
src/: constants.h  main.cpp
src/backup/: backupmanager.cpp  backupmanager.h
src/controllers/: bookcontroller.cpp  bookcontroller.h
src/database/: databasemanager.cpp  databasemanager.h
src/img/: BookWorm.icns
src/models/: book.cpp  book.h  bookmodel.cpp  bookmodel.h
src/statistics/: statisticsprovider.cpp  statisticsprovider.h
